[package]
name = "doem"
version = "0.1.0"
authors = ["Peter-Jan Gootzen <peterjan@gootzen.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-linear-algebra = { path = "../rusty-linear-algebra" }
luminance = "0.37.1"
luminance-derive = "0.5.0"
luminance-glfw = { path = "../luminance-rs/luminance-glfw" }
imgui = "0.1.0"
imgui-opengl-renderer = "0.5.0"
imgui-glfw-rs = "0.4.1"
wavefront_obj = "2.0.4"
try-guard = "0.2.0"
cgmath = "0.17.0"
clap = "2.33.0"

