[package]
name = "doem"
version = "0.1.0"
authors = ["Peter-Jan Gootzen <peterjan@gootzen.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doem-math = { git = "https://github.com/Peter-JanGootzen/doem-math" }
luminance = "0.38"
luminance-derive = "0.5.2"
luminance-glfw = "0.12.0"
wavefront_obj = "2.0.4"
try-guard = "0.2.0"
clap = "2.33.0"
specs = "0.15.1"
lazy_static = "1.4.0"
