[package]
name = "doem"
version = "1.0.0"
authors = ["Peter-Jan Gootzen <peterjan@gootzen.net>", "Bram-Boris Meerlo <me@bramboris.nl>"]
edition = "2018"
description = "A 3d space shooter school assignment using our own vector and matrices. See also doem-math."
license = "GPL-3.0-only"
repository = "https://github.com/Peter-JanGootzen/doem"

[dependencies]
doem-math = "1.0.0"
luminance = "0.38"
luminance-derive = "0.5.2"
luminance-glfw = "0.12.0"
wavefront_obj = "2.0.4"
clap = "2.33.0"
specs = "0.15.1"
lazy_static = "1.4.0"